
export enum UserRole {
  OWNER = 'owner',
  CONSTRUCTION_MANAGER = 'manager',
  WORKER = 'worker',
}